--- a/core/public/css/stylesheet.css
+++ b/core/public/css/stylesheet.css
@@ -104,6 +104,102 @@ body{
     box-sizing: border-box;
 } 
 
+/*product add */
+
+.Cont_Form_newProduct {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    border: solid 2px transparent;
+    border-radius: 15px;
+    background-color: white;
+    width: 80vw;
+    height: 50vh;
+    box-sizing: border-box;
+    padding: 15px;
+
+}
+
+.Title_New_Product{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    width: 70vw;
+    height: 6vh;
+}
+.Tittle_New_Product_H{
+    color:#2F3841;
+    align-items: center;
+    
+}
+.Cont_Icon_File_Img{
+    width: 20vw;
+    height: 20vh;
+}
+
+.Cont_Icon_File_Img i{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 12vw;
+    text-align: center;
+    color: #909090;
+}
+
+.Form_newProduct{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-end;
+}
+
+.Form_newProduct input {
+    border-radius: 0.4vw;
+    border: 0.5px solid;
+    box-shadow: 2px 2px 2px #666;
+    width: 30vw;
+    height: 3vh;
+}
+
+.Button_New_Product{
+    width: 25vw;
+    height: 10vh;
+    display: flex;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    justify-content: space-around;
+    align-content: flex-end;
+}
+
+.Button_New_Product button{
+    width: 10vw;
+    height: 5vh;
+    align-items: flex-end;
+    border-radius: 5px;
+    border: solid 0px;
+    box-shadow: -1px 1px 4px 2px #666;
+    color: white;
+}
+
+.Cont_buttons_New_Product{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+
+.ButonAddProduct{
+    background-color: #3869a3;
+}
+
+.ButtonCancProduct{
+    background-color: #d07684;
+}
+
+
 /*product detail*/
 
 body{
@@ -248,7 +344,7 @@ body{
     width: 100vw;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
    }
    .Cart-Container{
