--- a/core/views/usuario/registro.ejs
+++ b/core/views/usuario/registro.ejs
@@ -10,35 +10,38 @@
 </head>
 
 
+<body>
 
-<body class="body-Registro">
-    <%- include ('../partials/header') %>
-    <div class="Main-Registro">
-        <main class ="Main-Form-Registro">
-            <div class ="Form-Registro">
-                <form class ="Form-Registro-Campos">
-                    <div class ="Datos-Input-Grupo-Registro">
-                        <input type="email" class= "Form-Registro-Email" placeholder="Ingrese su correo electrónico">
-                        <br>
-                        <input type="password" class= "Form-Registro-Password" placeholder="Ingrese contraseña">
-                        <br>
-                        <input type="password" class= "Form-Registro-ConfirmPassword" placeholder="Confirme contraseña">
-                        <br>
-                    </div>
-                    <br>
-                    <br>
-                    <div class ="Botones-Form-Grupo">
-                        <button type= "button" name="Crear-Cuenta" > Crear Cuenta</button>
-                    </div>
-                </form>
-            </div>
-        </main>
+    <div class ="Register-Header">
+        <%- include ('../partials/header') %>
     </div>
-    <%- include ('../partials/footer') %>
+
+    <div class ="Register-Cont-Main">
+            <main class ="Register-Cont-Main-Form">
+                <div class ="Register-Cont-Form">
+                    <form class ="Register-Form-Campos">
+                        <div class ="Datos-Input-Grupo-Registro">
+                            <input type="email" class= "Form-Registro-Email" placeholder="Ingrese su correo electrónico">
+                            <br>
+                            <input type="password" class= "Form-Registro-Password" placeholder="Ingrese contraseña">
+                            <br>
+                            <input type="password" class= "Form-Registro-ConfirmPassword" placeholder="Confirme contraseña">
+                            <br>
+                        </div>
+                        <br>
+                        <br>
+                        <div class ="Botones-Form-Grupo">
+                            <button type= "button" name="Crear-Cuenta" > Crear Cuenta</button>
+                        </div>
+                    </form>
+                </div>
+            </main>
+    </div>
+
+    <div class ="Register-Footer">
+        <%- include ('../partials/footer') %>
+    </div>
+
 </body>
-
-
-
-
 
 </html>
